--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -27,8 +27,7 @@
                                        type="submit"
                                        value="Enter"
                                        id="btn-enter">
-                                <a href=""
-                                   class="btn btn-danger btn-sm id=btn-password mt-3">Password Reset</a>
+                                <a href="" class="btn btn-danger btn-sm id=btn-password mt-3">Password Reset</a>
                             </div>
                         </form>
                     </div>
