Configure seamless utilities pages and tests

--- a/templates/pages/seamless_utilities.html
+++ b/templates/pages/seamless_utilities.html
@@ -4,7 +4,9 @@
 {% endblock html_title %}
 {% block metadescription %}
     <meta name="description"
-          content="Energy Portfolio evolving our services to match the ever changing energy market   ">
+          content="Seamless Utilities is a complete on-the-cloud Property Management Platform that manages all utilities invoices- Removing the manual intervention of processing thousands of paper invoices per year">
 {% endblock metadescription %}
+
 {% block content %}
+
 {% endblock content %}
