--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -7,4 +7,5 @@
           content="Energy Portfolio evolving our services to match the ever changing energy market   ">
 {% endblock metadescription %}
 {% block content %}
+    <div class="masthead"></div>
 {% endblock content %}
