--- a/templates/account_managers/account_managers_dashboard.html
+++ b/templates/account_managers/account_managers_dashboard.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "dashboards/staff_portal.html" %}
 {% block html_title %}
     {{ html_title }}
 {% endblock html_title %}
@@ -9,8 +9,9 @@
             <div class="col-md-6">
                 <p>You are logged in as {{ user.email }}</p>
                 <p>Your last login was {{ user.last_login }}</p>
-                <a href="{% url 'users:client_list' %}">Client List</a>
             </div>
         </div>
     </div>
 {% endblock content %}
+{% block extra_js %}
+{% endblock extra_js %}
