Add account manager contract templates

--- a/templates/dashboards/staff_portal.html
+++ b/templates/dashboards/staff_portal.html
@@ -7,8 +7,8 @@
             <a href="#" class="navbar-brand">
                 <!-- Logo Image -->
                 <img src="{% static 'img/energy-portfolio-logo.png' %}"
-                     width="300"
-                     height="120"
+                     width="250"
+                     height="auto"
                      alt="Energy Portfolio Logo">
             </a>
             <div class="row g-0">
@@ -24,7 +24,7 @@
                            target="_blank"
                            rel="noopener noreferrer"
                            class="btn btn-outline-success btn-sm text-light border-light">FreshDesk</a>
-                      <a class="btn btn-outline-danger btn-sm text-light border-light"
+                        <a class="btn btn-outline-danger btn-sm text-light border-light"
                            data-bs-toggle="modal"
                            data-bs-target="#logoutModal">Log Out</a>
                     {% endif %}
