--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,3 +40,11 @@ footer a {
 
 footer a.hover { color: #8ebf42;}
 
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+  border: 1px solid #008000 !important;
+  margin-top: 30px;
+}
+
+.dt-buttons {
+  margin-bottom: 10px ;
+}
