--- a/templates/account_managers/client_list.html
+++ b/templates/account_managers/client_list.html
@@ -1,15 +1,48 @@
-{% extends "base.html" %}
+{% extends "dashboards/staff_portal.html" %}
 {% block html_title %}
     {{ html_title }}
 {% endblock html_title %}
 {% block content %}
-    {% if client_list %}
-        {% for client in client_list %}
-            <ul>
-                <li>{{ client.client }}</li>
-            </ul>
-            <a href="{{ client.get_absolute_url }}"
-               class="btn btn-success text-center">Detail</a>
-        {% endfor %}
-    {% endif %}
+    <div class="container mt-4">
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-6">
+                <h6 class="text-center text-success mb-4">{{ user.email }}&nbsp;:Your Clients</h6>
+                <hr>
+                <table id="am_list" class="table" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>Client Name</th>
+                            <th>Contracts</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% if client_list %}
+                            {% for client in client_list %}
+                                <tr>
+                                    <td>{{ client.client }}</td>
+                                    <td>
+                                        <a href="{{ client.get_absolute_url }}"><i class="fa-brands fa-page4" style="font-size: 40px; color:green;"></i></a>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        {% endif %}
+                    </tbody>
+                </table>
+                <br>
+            </div>
+        </div>
+    </div>
 {% endblock content %}
+{% block extra_js %}
+    <script>
+    $(document).ready(function () {
+      $('#am_list').DataTable({
+         columnDefs: [{ width: 10, targets: 1, }],
+        }
+
+      )
+
+    });
+
+    </script>
+{% endblock extra_js %}
