Complete account manager views and urls

--- a/templates/dashboards/staff_portal.html
+++ b/templates/dashboards/staff_portal.html
@@ -18,7 +18,7 @@
                            href="{% url 'users:account_managers_dashboard' %}">Dashboard</a>
                         <a href="{% url 'users:client_list' %}"
                            class="btn btn-outline-success btn-sm text-light border-light">Your Clients</a>
-                        <a href=""
+                        <a href="{% url 'clients:all_clients' %}"
                            class="btn btn-outline-warning btn-sm text-light border-light">All Clients</a>
                         <a href="https://energyportfolio.freshdesk.com/"
                            target="_blank"
