--- a/templates/account_managers/account_managers_dashboard.html
+++ b/templates/account_managers/account_managers_dashboard.html
@@ -11,6 +11,17 @@
                 <p>Your last login was {{ user.last_login }}</p>
             </div>
         </div>
+        <div class="col-md-6">
+            <h6 class="text-center fw-bold">Search All Contracts</h6>
+            <form class="d-flex" action="{% url 'users:search_results' %}" method="get">
+                <input name="q"
+                       class="form-control me-2"
+                       type="search"
+                       placeholder="Search by mpan/mpr or meter serial number or client, business, address"
+                       aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
     </div>
 {% endblock content %}
 {% block extra_js %}
