--- a/templates/clients/contracts/all_contracts/seamless_contracts.html
+++ b/templates/clients/contracts/all_contracts/seamless_contracts.html
@@ -1,4 +1,4 @@
-<!-- templates/contracts/non_seamless_contracts.html -->
+<!-- templates/contracts/seamless_contracts.html -->
 {% extends "dashboards/staff_portal.html" %}
 {% load static i18n %}
 {% block html_title %}
@@ -19,13 +19,18 @@
                     <b>Client: {{ contract.client }}</b>
                 </p>
                 <p>Business Name: {{ contract.business_name }}</p>
+                <p>Dwellant ID: {{ contract.dwellent_id }}</p>
+                <p>Bid ID: {{ contract.bid_id }}</p>
+                <p>Building Name: {{ contract.building_name }}</p>
+
                 {% if contract.account_number == None %}
                     <p>{% trans "" %}</p>
                 {% else %}
                     <p>Account Number: {{ contract.account_number }}</p>
                 {% endif %}
                 <p>Company Reg Number: {{ contract.company_reg_number }}</p>
-                <p>Supplier: {{ contract.supplier }}</p>
+                <p>Suppler: {{ contract.supplier }}</p>
+
                 <p>Utility Type: {{ contract.utility }}</p>
                 {% if contract.vat == None %}
                     <p>{% trans "Vat Rate: 0" %}</p>
@@ -43,11 +48,7 @@
                 {% endif %}
             </div>
             <div class="col mt-3">
-                {% if contract.contract_type == "NON_SEAMLESS" %}
-                    <p>
-                        <b>Contract Type: {% trans "Non Seamless" %}</b>
-                    </p>
-                {% endif %}
+                <p>Contract Type: {{ contract.contract_type }}</p>
                 {% if contract.days_till <= '1' %}
                     <p>
                         <b>{% trans "Contract has expired" %}</b>
@@ -57,6 +58,8 @@
                         <b>Contract Status: {{ contract.contract_status | lower }}</b>
                     </p>
                 {% endif %}
+
+
                 {% if contract.smart_meter == None %}
                     <p>{% trans "No Smart Meter" %}</p>
                 {% else %}
@@ -65,21 +68,22 @@
                 <p>Meter Serial Number: {{ contract.meter_serial_number }}</p>
                 <p>MPAN/MPR: {{ contract.mpan_mpr }}</p>
                 <p>Top Line: {{ contract.top_line }}</p>
-                <p>EAC: {{ contract.eac }}</p>
-                <p>KVA: {{ contract.kva }}</p>
-                <p>Day Consumption: {{ contract.day_consumption }}</p>
-                <p>Night Consumption: {{ contract.night_consumption }}</p>
+                <p>EAC: {{ contract.eac | floatformat:2 }}</p>
+             <p>KVA: {{ contract.kva }}</p>
+                <p>Day Consumption: {{ contract.day_consumption | floatformat:2 }}</p>
+                <p>Night Consumption: {{ contract.night_consumption | floatformat:2 }}</p>
             </div>
-            <div class="col mt-3">
+            <div class="row mt-3">
                 <p>Unit Rate 1: {{ contract.unit_rate_1 }}</p>
                 <p>Unit Rate 2: {{ contract.unit_rate_2 }}</p>
                 <p>Unit Rate 3: {{ contract.unit_rate_3 }}</p>
                 <p>Feed In Tariff: {{ contract.feed_in_tariff }}</p>
-                <p>Standing Charge: £{{ contract.standing_charge }}</p>
+                <p>Standing Charge: £{{ contract.standing_charge | floatformat:2 }}</p>
                 <p>Standing Charge Frequency: {{ contract.sc_frequency }}</p>
                 <p>Pence per Kilowatt: {{ contract.pence_per_kilowatt }}</p>
                 <p>Day Kilowatt Hour Rate: {{ contract.day_kilowatt_hour_rate }}</p>
                 <p>Night Rate: {{ contract.night_rate }}</p>
+              <p>Supplier: {{ contract.supplier }}</p>
             </div>
         </div>
         <hr>
@@ -90,12 +94,12 @@
             <p>Unit Rate 1: {{ contract.future_unit_rate_1 }}</p>
             <p>Unit Rate 2: {{ contract.future_unit_rate_2 }}</p>
             <p>Unit Rate 3: {{ contract.future_unit_rate_3 }}</p>
-            <p>Standing Charge: {{ contract.future_standing_charge }}</p>
+          <p>Standing Charge: {{ contract.future_standing_charge }}</p>
         </div>
-    </div>
-    <div class="row mb-4 text-center">
-        <a href="" target="_blank">
-            <button class="btn btn-secondary btn-sm mt-3">Download PDF</button>
-        </a>
+        <div class="row mb-4 text-center">
+            <a href="" target="_blank">
+                <button class="btn btn-secondary btn-sm mt-3">Download PDF</button>
+            </a>
+        </div>
     </div>
 {% endblock content %}
