Design contract templates

--- a/templates/account_managers/client_list.html
+++ b/templates/account_managers/client_list.html
@@ -21,7 +21,7 @@
                                 <tr>
                                     <td>{{ client.client }}</td>
                                     <td>
-                                        <a href="{{ client.get_absolute_url }}"><i class="fa-brands fa-page4" style="font-size: 40px; color:green;"></i></a>
+                                        <a href="{{ client.get_absolute_url }}"><i class="fa-solid fa-file" style="font-size: 40px; color:green;"></i></a>
                                     </td>
                                 </tr>
                             {% endfor %}
