--- a/templates/clients/contracts/client_detail.html
+++ b/templates/clients/contracts/client_detail.html
@@ -50,7 +50,7 @@
                         {% endif %}
                         <td>
                             <a href="{% url 'clients:contract_detail' contract.id %}">
-                                <i class="fa-brands fa-page4" style="font-size: 40px; color:green;"></i></a>
+                                <i class="fa-solid fa-file" style="font-size: 40px; color:green;"></i></a>
                         </td>
                     </tr>
                 {% endfor %}
