--- a/templates/clients/contracts/all_contracts/all_client_contracts.html
+++ b/templates/clients/contracts/all_contracts/all_client_contracts.html
@@ -21,7 +21,7 @@
                             <th>Supplier</th>
                             <th>Utility</th>
                             <th>CED</th>
-                          <th>D/A</th>
+                            <th>D/A</th>
                             <th>View</th>
                         </tr>
                     </thead>
@@ -43,14 +43,14 @@
                                 {% else %}
                                     <td>{{ contract.contract_end_date }}</td>
                                 {% endif %}
-                           {% if contract.is_directors_approval == "YES" %}
-                          <td>{% trans "D/A" %}</td>
-                          {% else %}
-                            <td></td>
-                          {% endif %}
+                                {% if contract.is_directors_approval == "YES" %}
+                                    <td>{% trans "D/A" %}</td>
+                                {% else %}
+                                    <td></td>
+                                {% endif %}
                                 <td>
-                                    <a href="{% url 'clients:all_clients_contract_detail' contract.id %}"
-                                       class="btn btn-success text-center"><i class="fa-regular fa-eye"></i></a>
+                                    <a href="{% url 'clients:all_clients_contract_detail' contract.id %}">
+                                        <i class="fa-solid fa-file" style="font-size: 40px; color:green;"></i></a>
                                 </td>
                             {% endfor %}
                         </tr>
@@ -62,7 +62,7 @@
     </div>
 {% endblock content %}
 {% block extra_js %}
-  <script>
+    <script>
     $(document).ready(function() {
     $('#cl_list').DataTable( {
         columnDefs: [{ width: 80, targets: 6 }],
