--- a/templates/account_managers/account_managers_dashboard.html
+++ b/templates/account_managers/account_managers_dashboard.html
@@ -1,4 +1,4 @@
-{% extends "dashboards/staff_portal.html" %}
+{% extends "dashboards/staff_portal_base.html" %}
 {% load client_tags %}
 {% block html_title %}
     {{ html_title }}
