--- a/templates/clients/contracts/all_contracts/all_clients.html
+++ b/templates/clients/contracts/all_contracts/all_clients.html
@@ -1,5 +1,5 @@
 <!-- templates/clients/contracts/all_clients.html -->
-{% extends "dashboards/staff_portal.html" %}
+{% extends "dashboards/staff_portal_base.html" %}
 {% block content %}
     <div class="container mt-4">
         <div class="row d-flex justify-content-center">
