--- a/templates/clients/contracts/all_contracts/seamless_contracts.html
+++ b/templates/clients/contracts/all_contracts/seamless_contracts.html
@@ -1,5 +1,5 @@
 <!-- templates/contracts/seamless_contracts.html -->
-{% extends "dashboards/staff_portal.html" %}
+{% extends "dashboards/staff_portal_base.html" %}
 {% load static i18n %}
 {% block html_title %}
     {{ html_title }}
