--- a/templates/account_managers/client_list.html
+++ b/templates/account_managers/client_list.html
@@ -1,4 +1,4 @@
-{% extends "dashboards/staff_portal.html" %}
+{% extends "dashboards/staff_portal_base.html" %}
 {% block html_title %}
     {{ html_title }}
 {% endblock html_title %}
