--- a/templates/clients/contracts/all_contracts/all_client_contracts.html
+++ b/templates/clients/contracts/all_contracts/all_client_contracts.html
@@ -1,5 +1,5 @@
 <!-- templates/clients/contracts/all_client_contracts.html -->
-{% extends "dashboards/staff_portal.html" %}
+{% extends "dashboards/staff_portal_base.html" %}
 {% load i18n %}
 {% block html_title %}
     {{ html_title }}
@@ -29,9 +29,9 @@
                         {% for contract in client.client_contracts.all %}
                             <tr>
                                 {% if contract.contract_type == "NON_SEAMLESS" %}
-                                    <td>{% trans "Non Seamless" %}</td>
+                                    <td>{% trans "NS" %}</td>
                                 {% elif contract.contract_type == "SEAMLESS" %}
-                                    <td>{% trans "Seamless" %}</td>
+                                    <td>{% trans "S" %}</td>
                                 {% endif %}
                                 <td>{{ contract.business_name | title | truncatechars:20 }}</td>
                                 <td>{{ contract.site_address | truncatechars:20 }}</td>
