--- a/templates/clients/contracts/client_detail.html
+++ b/templates/clients/contracts/client_detail.html
@@ -1,5 +1,5 @@
 <!-- templates/clients/contracts/client_detail.html -->
-{% extends "dashboards/staff_portal.html" %}
+{% extends "dashboards/staff_portal_base.html" %}
 {% load i18n %}
 {% block html_title %}
     {{ html_title }} Contracts
