Add message alerts

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,7 @@
             {% include "partials/main_navbar.html" %}
         {% endblock navbar %}
         <main id="pageMain">
+            {% include "partials/alerts.html" %}
             {% block content %}
                 <!-- Content used in other pages -->
             {% endblock content %}
@@ -68,6 +69,7 @@
         <script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.print.min.js"></script>
         <script src=" https://cdn.datatables.net/buttons/2.4.2/js/buttons.colVis.min.js"></script>
         <script src="https://cdn.datatables.net/responsive/2.4.1/js/dataTables.responsive.min.js"></script>
+        <script src="{% static 'js/alert.js' %}"></script>
         {% block extra_js %}
         {% endblock extra_js %}
     </body>
