Create client manager contract files

--- a/templates/dashboards/client_portal_base.html
+++ b/templates/dashboards/client_portal_base.html
@@ -7,8 +7,8 @@
             <a href="#" class="navbar-brand">
                 <!-- Logo Image -->
                 <img src="{% static 'img/energy-portfolio-logo.png' %}"
-                     width="300"
-                     height="120"
+                     width="250"
+                     height="auto"
                      alt="Energy Portfolio Logo">
             </a>
             <div class="row g-0">
