--- a/templates/partials/main_navbar.html
+++ b/templates/partials/main_navbar.html
@@ -57,7 +57,7 @@
                     <a class="nav-link" href="{% url 'users:login' %}"><i class="fa-solid fa-lock"></i>&nbsp;Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href=""><i class="fa-solid fa-lock"></i>&nbsp;Client Registration</a>
+                    <a class="nav-link" href="{% url 'users:client_manager_registration' %}"><i class="fa-solid fa-lock"></i>&nbsp;Client Registration</a>
                 </li>
             </ul>
         </div>
