--- a/templates/client_managers/contract_detail.html
+++ b/templates/client_managers/contract_detail.html
@@ -54,7 +54,7 @@
         </a>
         {% if contract.meter_serial_number is None or contract.meter_serial_number is 'UMS' %}
         {% else %}
-            <a href="">
+            <a href="{% url 'clients:meter_reading' contract.id %}">
                 <button class="btn btn-secondary btn-sm mt-3">Submit Meter Reading</button>
             </a>
         {% endif %}
